# 05_AI_PARK-jslee

./: .gitignore  README.md  pyproject.toml
backend/config/: __init__.py  urls.py
backend/config/settings/: base.py  celery.py
backend/tts/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/tts/utils/: __init__.py
