[tool.poetry]
name = "05-ai-park-jslee"
version = "0.1.0"
description = ""
authors = ["Jong012 <Jong012>"]
readme = "README.md"
packages = [{include = "05_ai_park_jslee"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.4"
django-dotenv = "^1.4.2"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
